increased width of yellow bg, added some accessibility fixes: focus on buttons and text contrast issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,9 +60,27 @@ p {
   font-weight: bold;
   margin: 0;
   font-size: 1.2rem;
+  transition: all 0.3s ease;
+}
+
+.accent-text:hover {
+  color: var(--black)
+}
+
+.yellowbg {
+  background: var(--color3);
 }
 
 header {
+   width: 100%;
+   height: 85px;
+   display: flex;
+   justify-content: center;
+   background: var(--white);
+   position: fixed;
+}
+
+.header-wrapper {
   width: 100%;
   max-width: 1280px;
   display: flex;
@@ -89,6 +107,14 @@ header {
 /* nav menu icon for mobile layout */
 .menu-icon {
   display: none;
+  outline: none;
+  background: none;
+  border: none;
+}
+
+.menu-icon:focus {
+  border: 3px solid var(--color2);
+  border-radius: 5px;
 }
 
 .header-nav ul {
@@ -290,8 +316,8 @@ header {
   background-color: var(--white);
 }
 
-.contact-btn a,
-.code-btn a {
+.contact-btn,
+.code-btn {
   font-size: 1.4rem;
   text-decoration: none;
   color: var(--black);
